新API: 課表
